# ============================================================================ #
# Copyright (c) 2022 - 2025 NVIDIA Corporation & Affiliates.                   #
# All rights reserved.                                                         #
#                                                                              #
# This source code and the accompanying materials are made available under     #
# the terms of the Apache License 2.0 which accompanies this distribution.     #
# ============================================================================ #

set(CUDAQ_LIBRARY_MODE ON)
find_package(CUDAQ)
if (CUDAQ_FOUND)
  add_subdirectory(cudaq)
endif()